--- a/Meducament.html
+++ b/Meducament.html
@@ -4,8 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="Medecamentcss.css">
 </head>
 <body>
-    
+	<header>
+        <h1>Електронний довідник медичних препаратів</h1>
+    </header>
+    <main>
+        <section>
+            <h2>Список препаратів</h2>
+            <article>
+                <h3>Назва препарату 1</h3>
+                <img src="" alt="Фото препарату 1">
+                <p>Опис препарату 1.</p>
+            </article>
+            <article>
+                <h3>Назва препарату 2</h3>
+                <img src="" alt="Фото препарату 2">
+                <p>Опис препарату 2.</p>
+            </article>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 Медичний довідник</p>
+    </footer>
 </body>
 </html>
