--- a/Meducament.html
+++ b/Meducament.html
@@ -15,12 +15,12 @@
             <h2>Список препаратів</h2>
             <article>
                 <h3>Назва препарату 1</h3>
-                <img src="" alt="Фото препарату 1">
+                <img src="ibf.jfif" alt="Фото препарату 1">
                 <p>Опис препарату 1.</p>
             </article>
             <article>
                 <h3>Назва препарату 2</h3>
-                <img src="" alt="Фото препарату 2">
+                <img src="vg.jfif" alt="Фото препарату 2">
                 <p>Опис препарату 2.</p>
             </article>
         </section>
