--- a/Meducament.html
+++ b/Meducament.html
@@ -9,23 +9,35 @@
 <body>
 	<header>
         <h1>Електронний довідник медичних препаратів</h1>
+        <nav>
+            <ul>
+                <li><a href="#home">Головна</a></li>
+                <li><a href="#list">Список препаратів</a></li>
+                <li><a href="#contact">Контакти</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section>
             <h2>Список препаратів</h2>
             <article>
-                <h3>Назва препарату 1</h3>
+                <h3>Ібупрофен</h3>
                 <img src="ibf.jfif" alt="Фото препарату 1">
-                <p>Опис препарату 1.</p>
+                <p>Ібупрофен – похідне фенілпропіонової кислоти, що чинить протизапальну, аналгезуючу та жарознижувальну дію.</p>
             </article>
             <article>
-                <h3>Назва препарату 2</h3>
+                <h3>Активоване Вугіля</h3>
                 <img src="vg.jfif" alt="Фото препарату 2">
-                <p>Опис препарату 2.</p>
+                <p>К дієтична добавка до раціону харчування з метою виведення токсичних речовин із організму при порушеннях травлення.</p>
             </article>
         </section>
     </main>
     <footer>
+        <section id="contact">
+            <h3>Контакти</h3>
+            <p>Email: info@medguide.com</p>
+            <p>Телефон: +380 44 123 4567</p>
+        </section>
         <p>&copy; 2025 Медичний довідник</p>
     </footer>
 </body>
