--- a/Golovna.html
+++ b/Golovna.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Головна - Онлайн Магазин</title>
-    <link rel="stylesheet" type="text/css" href="Medecamentcss.css">
+    <link rel="stylesheet" type="text/css" href="Golovnacss.css">
 </head>
 <body>
     <header>
@@ -12,8 +12,8 @@
         <nav>
             <ul>
                 <li><a href="Golovna.html">Головна</a></li>
-                <li><a href="list.html">Список препаратів</a></li>
-                <li><a href="contact.html">Контакти</a></li>
+                <li><a href="Meducament.html">Список препаратів</a></li>
+                <li><a href="Contact.html">Контакти</a></li>
             </ul>
         </nav>
     </header>
@@ -23,6 +23,11 @@
         </section>
     </main>
     <footer>
+        <section id="contact">
+            <h3>Контакти</h3>
+            <p>Email: info@medguide.com</p>
+            <p>Телефон: +380 44 123 4567</p>
+        </section>
         <p>&copy; 2025 Онлайн Магазин</p>
     </footer>
 </body>
