--- a/Meducament.html
+++ b/Meducament.html
@@ -11,9 +11,9 @@
         <h1>Електронний довідник медичних препаратів</h1>
         <nav>
             <ul>
-                <li><a href="#home">Головна</a></li>
-                <li><a href="#list">Список препаратів</a></li>
-                <li><a href="#contact">Контакти</a></li>
+                <li><a href="Golovna.html">Головна</a></li>
+                <li><a href="Meducament.html">Список препаратів</a></li>
+                <li><a href="Contact.html">Контакти</a></li>
             </ul>
         </nav>
     </header>
