Оновлення Сайту препаратів

--- a/Active-Vygil.html
+++ b/Active-Vygil.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Головна - Онлайн Магазин</title>
-    <link rel="stylesheet" type="text/css" href="Golovnacss.css">
+    <title>Ібупрофен - Медичний довідник</title>
+    <link rel="stylesheet" type="text/css" href="Active-Vygil.css">
 </head>
 <body>
     <header>
@@ -18,17 +18,14 @@
         </nav>
     </header>
     <main>
-        <section class="centered">
-            <h2>Це онлайн магазин в Петровича</h2>
+        <section>
+            <h2>Активоване</h2>
+            <img src="vg.jfif" alt="Фото препарату 2">
+            <p>К дієтична добавка до раціону харчування з метою виведення токсичних речовин із організму при порушеннях травлення.</p>
         </section>
     </main>
     <footer>
-        <section id="contact">
-            <h3>Контакти</h3>
-            <p>Email: info@medguide.com</p>
-            <p>Телефон: +380 44 123 4567</p>
-        </section>
-        <p>Онлайн Магазин Петрович</p>
+        <p>Медичний довідник в Петровича</p>
     </footer>
 </body>
 </html>
