--- a/Contact.html
+++ b/Contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Контакти - Онлайн Магазин</title>
-    <link rel="stylesheet" type="text/css" href="Medecamentcss.css">
+    <link rel="stylesheet" type="text/css" href="Contact.css">
 </head>
 <body>
     <header>
@@ -18,7 +18,7 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section style="margin-bottom: 30px;">
             <h2>Контакти</h2>
             <p>Email: info@medguide.com</p>
             <p>Телефон: +380 44 123 4567</p>
@@ -40,7 +40,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 Онлайн Магазин</p>
+        <p>Онлайн Магазин Петрович</p>
     </footer>
 </body>
 </html>
