--- a/Meducament.html
+++ b/Meducament.html
@@ -21,12 +21,12 @@
         <section>
             <h2>Список препаратів</h2>
             <article>
-                <h3>Ібупрофен</h3>
+                <ul> <li><a href="Ibuprofen.html">Ibuprofen</a></li> </ul>
                 <img src="ibf.jfif" alt="Фото препарату 1">
                 <p>Ібупрофен – похідне фенілпропіонової кислоти, що чинить протизапальну, аналгезуючу та жарознижувальну дію.</p>
             </article>
             <article>
-                <h3>Активоване Вугіля</h3>
+                <ul> <li><a href="Active-Vygil.html">Active Vygila</a></li> </ul>
                 <img src="vg.jfif" alt="Фото препарату 2">
                 <p>К дієтична добавка до раціону харчування з метою виведення токсичних речовин із організму при порушеннях травлення.</p>
             </article>
@@ -38,7 +38,7 @@
             <p>Email: info@medguide.com</p>
             <p>Телефон: +380 44 123 4567</p>
         </section>
-        <p>&copy; 2025 Медичний довідник</p>
+        <p>Онлайн Магазин Петрович</p>
     </footer>
 </body>
 </html>
