Оновлення сайту контакт

--- a/Contact.html
+++ b/Contact.html
@@ -23,7 +23,7 @@
             <p>Email: info@medguide.com</p>
             <p>Телефон: +380 44 123 4567</p>
         </section>
-        <section>
+        <section class="form">
             <h2>Форма зворотного зв'язку</h2>
             <form action="#" method="post">
                 <label for="name">Ім'я:</label>
