--- a/Golovna.html
+++ b/Golovna.html
@@ -23,12 +23,23 @@
         </section>
     </main>
     <footer>
-        <section id="contact">
-            <h3>Контакти</h3>
-            <p>Email: info@medguide.com</p>
-            <p>Телефон: +380 44 123 4567</p>
-        </section>
-        <p>Онлайн Магазин Петрович</p>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>Контакти</h3>
+                <p>Email: info@medguide.com</p>
+                <p>Телефон: +380 44 123 4567</p>
+            </div>
+            <div class="footer-section">
+                <h3>Швидкі посилання</h3>
+                <p><a href="Golovna.html">Головна</a></p>
+                <p><a href="Meducament.html">Список препаратів</a></p>
+                <p><a href="Contact.html">Контакти</a></p>
+            </div>
+            <div class="footer-section">
+                <h3>Про нас</h3>
+                <p>Онлайн Магазин Петрович – ваш надійний довідник у світі медицини.</p>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
