--- a/Ibuprofen.html
+++ b/Ibuprofen.html
@@ -25,7 +25,23 @@
         </section>
     </main>
     <footer>
-        <p>Медичний довідник в Петровича</p>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>Контакти</h3>
+                <p>Email: info@medguide.com</p>
+                <p>Телефон: +380 44 123 4567</p>
+            </div>
+            <div class="footer-section">
+                <h3>Швидкі посилання</h3>
+                <p><a href="Golovna.html">Головна</a></p>
+                <p><a href="Meducament.html">Список препаратів</a></p>
+                <p><a href="Contact.html">Контакти</a></p>
+            </div>
+            <div class="footer-section">
+                <h3>Про нас</h3>
+                <p>Онлайн Магазин Петрович – ваш надійний довідник у світі медицини.</p>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
